@@ -54,20 +54,30 @@ public class SslUtils {
     private static final SSLSocketFactory trustAllSocketFactory;
 
     static {
-        // default factory with certificate validation
-        validateSocketFactory = TLSFallbackSSLSocketFactory.wrapFactory(createSocketFactory(null));
+        SSLSocketFactory tmpSocketFactory = null;
+        try {
+            // default factory with certificate validation
+            //noinspection ConstantConditions
+            tmpSocketFactory = TLSFallbackSSLSocketFactory.wrapFactory(createSocketFactory(null));
+        } catch (Exception e) {
+            logger.warn("Failed to construct a Socket factory with the following error: \"" + e.getMessage() + "\". " +
+                "Agent communication with APM Server may not be able to authenticate the server certificate. " +
+                "See documentation for the \"verify_server_cert\" configuration option for optional workaround", e);
+        }
+        validateSocketFactory = tmpSocketFactory;
 
-        SSLSocketFactory tmpTrustAllSocketFactory = null;
+        tmpSocketFactory = null;
         // without certificate validation
         try {
             X509TrustManager trustAllTrustManager = createTrustAllTrustManager();
-            tmpTrustAllSocketFactory = TLSFallbackSSLSocketFactory.wrapFactory(createSocketFactory(new TrustManager[]{trustAllTrustManager}));
+            tmpSocketFactory = TLSFallbackSSLSocketFactory.wrapFactory(createSocketFactory(new TrustManager[]{trustAllTrustManager}));
         } catch (Exception e) {
             logger.info("Failed to construct a trust-all Socket factory with the following error: \"{}\". Agent communication " +
-                "with the APM server must verify the server certificates, meaning - the \"verify_server_cert\" configuration " +
+                "with the APM Server must verify the server certificate, meaning - the \"verify_server_cert\" configuration " +
                 "option must be set to \"true\"", e.getMessage());
+            logger.debug("Socket factory creation error stack trace: ", e);
         }
-        trustAllSocketFactory = tmpTrustAllSocketFactory;
+        trustAllSocketFactory = tmpSocketFactory;
 
         hostnameVerifier = new HostnameVerifier() {
             @Override
@@ -95,21 +105,16 @@ public class SslUtils {
     }
 
     @Nullable
-    private static SSLSocketFactory createSocketFactory(TrustManager[] trustAllCerts) {
+    private static SSLSocketFactory createSocketFactory(TrustManager[] trustAllCerts) throws NoSuchAlgorithmException, KeyManagementException {
+        SSLContext sslContext;
         try {
-            SSLContext sslContext;
-            try {
-                sslContext = SSLContext.getInstance("SSL");
-            } catch (NoSuchAlgorithmException e) {
-                logger.info("SSL is not supported, trying to use TLS instead.");
-                sslContext = SSLContext.getInstance("TLS");
-            }
-            sslContext.init(null, trustAllCerts, new java.security.SecureRandom());
-            return sslContext.getSocketFactory();
-        } catch (NoSuchAlgorithmException | KeyManagementException e) {
-            logger.warn(e.getMessage(), e);
-            return null;
+            sslContext = SSLContext.getInstance("SSL");
+        } catch (NoSuchAlgorithmException e) {
+            logger.info("SSL is not supported, trying to use TLS instead.");
+            sslContext = SSLContext.getInstance("TLS");
         }
+        sslContext.init(null, trustAllCerts, new java.security.SecureRandom());
+        return sslContext.getSocketFactory();
     }
 
     private static X509TrustManager createTrustAllTrustManager() {
